--- a/arch/arm64/configs/dhollmen_gauguin_defconfig
+++ b/arch/arm64/configs/dhollmen_gauguin_defconfig
@@ -133,7 +133,7 @@ CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
-CONFIG_RT_GROUP_SCHED=y
+# CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_RDMA is not set
 CONFIG_CGROUP_FREEZER=y
@@ -421,7 +421,7 @@ CONFIG_SECCOMP=y
 # CONFIG_OKL4_GUEST is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_UNMAP_KERNEL_AT_EL0=y
-CONFIG_HARDEN_BRANCH_PREDICTOR=y
+# CONFIG_HARDEN_BRANCH_PREDICTOR is not set
 CONFIG_HARDEN_EL2_VECTORS=y
 CONFIG_ARM64_SSBD=y
 # CONFIG_PRINT_VMEMLAYOUT is not set
@@ -464,7 +464,7 @@ CONFIG_CMDLINE_EXTEND=y
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
 # CONFIG_KRYO_PMU_WORKAROUND is not set
 CONFIG_BOOT_INFO=y
-# CONFIG_BUILD_ARM64_DT_OVERLAY is not set
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
 CONFIG_COMPAT=y
 
 #
@@ -1641,7 +1641,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_MISC_RTSX_PCI is not set
 # CONFIG_MISC_RTSX_USB is not set
 # CONFIG_FPR_FPC is not set
-CONFIG_GPIO_TESTING_MODE=y
+# CONFIG_GPIO_TESTING_MODE is not set
 
 #
 # SCSI device support
@@ -2413,7 +2413,6 @@ CONFIG_LDISC_AUTOLOAD=y
 #
 # Serial drivers
 #
-CONFIG_SERIAL_EARLYCON=y
 # CONFIG_SERIAL_8250 is not set
 
 #
@@ -2426,11 +2425,10 @@ CONFIG_SERIAL_EARLYCON=y
 # CONFIG_SERIAL_MAX310X is not set
 # CONFIG_SERIAL_UARTLITE is not set
 CONFIG_SERIAL_CORE=y
-CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_JSM is not set
 # CONFIG_SERIAL_MSM is not set
 CONFIG_SERIAL_MSM_GENI=y
-CONFIG_SERIAL_MSM_GENI_CONSOLE=y
+# CONFIG_SERIAL_MSM_GENI_CONSOLE is not set
 CONFIG_SERIAL_MSM_GENI_HALF_SAMPLING=y
 # CONFIG_SERIAL_MSM_HS is not set
 # CONFIG_SERIAL_SCCNXP is not set
@@ -2443,7 +2441,6 @@ CONFIG_SERIAL_MSM_GENI_HALF_SAMPLING=y
 # CONFIG_SERIAL_RP2 is not set
 # CONFIG_SERIAL_FSL_LPUART is not set
 # CONFIG_SERIAL_CONEXANT_DIGICOLOR is not set
-CONFIG_FASTBOOT_CMD_CTRL_UART=y
 # CONFIG_SERIAL_DEV_BUS is not set
 CONFIG_TTY_PRINTK=y
 # CONFIG_HVC_DCC is not set
@@ -2472,7 +2469,7 @@ CONFIG_MSM_FASTCVPD=y
 CONFIG_MSM_ADSPRPC=y
 # CONFIG_ADSPRPC_DEBUG is not set
 CONFIG_MSM_RDBG=y
-CONFIG_XLOGCHAR=y
+# CONFIG_XLOGCHAR is not set
 # CONFIG_RANDOM_TRUST_BOOTLOADER is not set
 
 #
@@ -4830,7 +4827,7 @@ CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 # CONFIG_MSM_JTAGV8 is not set
 CONFIG_QTEE_SHM_BRIDGE=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
-CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE is not set
 # CONFIG_QMP_DEBUGFS_CLIENT is not set
 CONFIG_QCOM_CDSP_RM=y
 CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION=y
@@ -5887,7 +5884,7 @@ CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_DEBUG_INFO is not set
 CONFIG_ENABLE_MUST_CHECK=y
 # CONFIG_FIRE_WATCHDOG is not set
-CONFIG_DUMP_ALL_STACKS=y
+# CONFIG_DUMP_ALL_STACKS is not set
 CONFIG_FRAME_WARN=4096
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_READABLE_ASM is not set
@@ -5941,8 +5938,8 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_SOFTLOCKUP_DETECTOR is not set
 # CONFIG_DETECT_HUNG_TASK is not set
 # CONFIG_WQ_WATCHDOG is not set
-CONFIG_PANIC_ON_OOPS=y
-CONFIG_PANIC_ON_OOPS_VALUE=1
+# CONFIG_PANIC_ON_OOPS is not set
+CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=5
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHED_INFO=y
