--- a/arch/arm64/configs/dhollmen_gauguin_defconfig
+++ b/arch/arm64/configs/dhollmen_gauguin_defconfig
@@ -5338,6 +5338,12 @@ CONFIG_RMNET_PERF=y
 CONFIG_RMNET_SHS=y
 
 #
+# KernelSU
+#
+CONFIG_KSU=y
+# CONFIG_KSU_DEBUG is not set
+
+#
 # File systems
 #
 CONFIG_DCACHE_WORD_ACCESS=y
